# 360PiFlasher

./: Overview and Goals  PROJECT_COMPLETE.md  README.md
Pi4Flasher/: .gitignore  BUILDING.md  CMakeLists.txt  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  ProjectDescription.md  QUICKSTART.md  README.md  TESTING.md
Pi4Flasher/scripts/: install_deps.sh  pi4flasher.service  setup_service.sh
Pi4Flasher/src/: main.c  pi4_gpio.c  pi4_gpio.h  pi4_spi.c  pi4_spi.h  pins.h  protocol.h  spiex.c  spiex.h  xbox.c  xbox.h
